message Init {
    required bytes PubKey = 1;
    required bytes Nonce = 2;
    required string SupportedCurves = 3;
    required string SupportedHashes = 4;
    required string SupportedCiphers = 5;
}

message Handshake {
    required bytes EphemeralPubKey = 1;
}

message ConfirmHandshake {
    required bytes Nonce = 1;
    required bytes Signature = 2;
}

message Identity {
    // Address the local node is listening on.
    required string ListenAddress = 1;
    // Apparent address of the other side of the connection.
    required string ConnectionAddress = 2;
}
